改了一下高亮路由，然后完成了所有路由的文档
